<resources>
    <string name="app_name">Yeel DRC</string>
    <string name="something_wrong">There was an error processing your request. Please contact Yeel support if it persists.</string>
    <string name="something_wrong_logout">There was an error processing your request. Please contact Yeel support if it persists.</string>
    <string name="something_wrong_title">Sorry, something went wrong</string>
    <string name="ok_logout">OK, Logout</string>
    <string name="ok">OK</string>
    <string name="no_internet_title">Slow or no internet connection</string>
    <string name="no_internet_message">Check your internet connection and try again.</string>
    <string name="we_ll_be_back_soon">We\'ll be back soon</string>
    <string name="sorry_for_the_inconvenience_we_are_busy_improving_the_yeel_experience_for_you">Sorry for the inconvenience. We are busy improving the Yeel experience for you.</string>
    <string name="your_yeel_login_session_has_expired_please_login_again_or_contact_us_if_the_problem_persists">Your Yeel login session has expired, please login again or contact us if the problem persists</string>
    <string name="please_log_out_from_the_other_device_and_try_again_after_2_3_mins">Please log out from the other device and try again after 2-3 mins.</string>
    <string name="oops_we_found_another_active_device_login">Oops, we found another active device login</string>
    <string name="rooted_device_message">Google is unable to verify that your device or the software running on it is Android compatible.</string>
    <string name="rooted_device_heading">Yeel not available on this device</string>
    <string name="welcome_to_yeel_sustenta">Welcome to Yeel</string>
    <string name="welcome_screen_message">Never a better time than now to start thinking about how you manage all your finance with ease.</string>
    <string name="log_in">Login</string>
    <string name="open_yeel_sustenta_account">Open Yeel account</string>
    <string name="register_with_yeel_sustenta">Register with Yeel</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="continue_label">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_in">Re-send code in</string>
    <string name="second">\u0020seconds</string>
    <string name="select_your_account_type">Select your Account Type</string>
    <string name="individual">Individual</string>
    <string name="business">Business</string>
    <string name="first_name">First name</string>
    <string name="middle_name_optional">Middle name (optional)</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth_mm_dd_yyyy">Date of birth DD/MM/YYYY</string>
    <string name="id_expiry_date_mm_dd_yyyy">ID Expiry Date (DD/MM/YYYY)</string>
    <string name="personal_information">Personal Information</string>
    <string name="enter_valid_first_name">Enter valid  First Name</string>
    <string name="enter_valid_middle_name">Enter valid Middle Name</string>
    <string name="enter_valid_last_name">Enter valid Last Name</string>
    <string name="enter_valid_dobe">Enter valid Date of birth</string>
    <string name="enter_expiry_date">Enter valid Expiry Date</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="we_will_send_you_verification_code_to_your_email_in_order_to_verify">We will send you verification code to your email in order to verify</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="the_code_you_ve_entered_is_incorrect_please_try_again">The code you\'ve entered is incorrect. Please try again.</string>
    <string name="check_spam_junk_folder_in_case_you_don_t_receive_an_email">Check Spam/Junk folder in case you don\'t receive an email</string>
    <string name="your_residence">Your Residence</string>
    <string name="provinces">Province</string>
    <string name="district">District</string>
    <string name="i_will_update_later">I will update later</string>
    <string name="locality">Locality</string>
    <string name="business_information">Business Information</string>
    <string name="business_name">Business Name</string>
    <string name="authorized_person_1">Authorized Person 1</string>
    <string name="authorized_person_2_optional">Authorized Person 2 (optional)</string>
    <string name="tax_id_or_cr_reg_number">Tax ID or CR (Reg. Number)</string>
    <string name="enter_valid_business_name">Enter valid business name</string>
    <string name="enter_valid_authorized_person_1">Enter valid Authorized Person 1</string>
    <string name="enter_valid_authorized_person_2">Enter valid Authorized Person 2</string>
    <string name="enter_valid_tax_id">Enter valid Tax ID</string>
    <string name="business_address">Business Address</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2_optional">Address line 2 (Optional)</string>
    <string name="upload_kyc_document">Upload KYC Documents</string>
    <string name="business_document">Business Document</string>
    <string name="upload">Upload</string>
    <string name="authorized_person_s_selfie">Authorized Person’s Selfie</string>
    <string name="authorized_person_s_signature">Authorized Person’s Signature</string>
    <string name="sign_your_signature_on_a_piece_of_paper_and_click_the_picture_to_upload_it">Sign your signature on a piece of paper and click the picture to upload it.</string>
    <string name="before_submitting_the_document_please_make_sure_that_the_document_is_clearly_visible">Before submitting the document, please make sure that the document is clearly visible.</string>
    <string name="tc_one">By continuing, you accept Yeel’s</string>
    <string name="tc_two">Terms and Conditions</string>
    <string name="your_id">Your ID</string>
    <string name="your_selfie">Your Selfie</string>
    <string name="your_signature">Your Signature</string>
    <string name="adjust_fingers">Position the photo in the frame, Use your two fingers to zoom in/out"</string>
    <string name="retake">Retake</string>
    <string name="use_photo">Use Photo</string>
    <string name="not_now">Not Now</string>
    <string name="to_capture_photos_or_choose_photos_from_the_gallery_allow_yeel_sustenta_access_to_your_camera_tap_settings_permissions_and_turn_camera_on"><![CDATA[To capture photos or choose photos from the gallery, allow Yeel access to your camera. Tap Settings > Permissions, and turn Camera on.]]></string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="issuing_country">Issuing Country</string>
    <string name="id_type">ID Type</string>
    <string name="id_number">ID Number</string>
    <string name="id_expiry_date">ID Expiry Date</string>
    <string name="create_pin">Create PIN</string>
    <string name="add_a_6_digit_pin_to_secure_your_wallet">Add a 6-digit PIN to secure your wallet.</string>
    <string name="pin_helps_you_recover_your_wallet_if_your_phone_is_lost_or_stolen">(PIN helps you recover your wallet if your phone is lost or stolen.)</string>
    <string name="your_pin_will_be_used_to_authorise_sessions_transactions_redemptions_and_recover_wallet">Your PIN will be used to authorise sessions, transactions, redemptions and recover wallet.</string>
    <string name="please_enter_more_squre_pin">Please enter more secured pin</string>
    <string name="enter_six_digit_pin">Enter 6 digit Pin</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="please_be_sure_to_remember_it">Please be sure to remember it.</string>
    <string name="incorrect_pin_try_again">The PIN you\'ve entered doesn\'t match. Please try again.</string>
    <string name="skip">Skip</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_ve_finished_creating_a_yeel_sustenta_account_it_will_be_reviewed_within_24_hours">You’ve finished creating a Yeel account. It will be reviewed within 24 hours.</string>
    <string name="ok_let_s_start">Ok, Let\'s Start</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="pin">PIN</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register">Register Now</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="let_s_sign_you_in">Let’s sign you in</string>
    <string name="not_you">Not you?</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="pay">Pay</string>
    <string name="send">Send</string>
    <string name="payme">PayMe</string>
    <string name="cash_out">Cash Out</string>
    <string name="protect_your_account">Protect your account</string>
    <string name="use_your_screen_lock_to_secure_your_yeel_digital_nbank_account">Use your screen lock to secure your Yeel Digital \nBank account</string>
    <string name="enable_finger_print">Enable Finger Print</string>
    <string name="maybe_be_later">Maybe be later</string>
    <string name="unlock">Unlock Yeel</string>
    <string name="confirm_pattern">Confirm your screen lock PIN,Pattern or Password</string>
    <string name="account_summary">Account Summary</string>
    <string name="available_balance">AVAILABLE BALANCE</string>
    <string name="country_code">+243</string>
    <string name="country_code_two">211+</string>
    <string name="country_code_for_api">+243</string>
    <string name="date">Date</string>
    <string name="transaction">Transaction</string>
    <string name="debit_with_sign">Debit (-)</string>
    <string name="credit_with_sign">Credit (+)</string>
    <string name="balance">Balance</string>
    <string name="no_account_summery">No account summary</string>
    <string name="reports">Reports</string>
    <string name="select_a_year">Select a Year</string>
    <string name="select_a_month">Select a month</string>
    <string name="download_statement">Download Statement</string>
    <string name="timing">Timing</string>
    <string name="app_related_queries">App related queries:</string>
    <string name="chat_via_whatsapp">Chat via WhatsApp</string>
    <string name="email_us_at_hello_yeel_app">Email at yeelsouthsudan@yeel.io</string>
    <string name="call_now">Call Now</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="we_found_that_you_already_have_an_active_account_associated_with_this_mobile_number">We found that you already have an active account associated with this mobile number.</string>
    <string name="if_you_want_to_create_a_new_account_you_will_need_seperate_mobile_number_to_proceed">If you want to create a new account, You will need seperate mobile number to proceed.</string>
    <string name="or">OR</string>
    <string name="note_current_month_statement_will_be_not_generated">Note: Current month statement will be not generated.</string>
    <string name="customer_service_hours">Customer Service Hours</string>
    <string name="monday_to_friday_7_00_am_to_5_30_pm">Monday to Friday - 7:00 am to 5:30 pm</string>
    <string name="saturday_8_00_am_to_2_00_pm">Saturday - 8:00 am to 2:00 pm</string>
    <string name="please_call_211_923_614_400_to_contact_customer_service_with_any_issues_or_concerns">Please call +211 923 614 400 to contact Customer Service with any issues or concerns.</string>
    <string name="excluding_all_national_holidays">(Excluding all national holidays)</string>
</resources>