<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_25">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_sequrity"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protect_your_account"
            android:textSize="@dimen/text_size_18"
            android:layout_marginTop="@dimen/extra_medium_20"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textPrimary"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_your_screen_lock_to_secure_your_yeel_digital_nbank_account"
            android:textSize="@dimen/text_size_12"
            android:gravity="center"
            android:textColor="@color/textPrimary"
            android:fontFamily="@font/roboto_regular"/>
        <TextView
            android:layout_marginTop="@dimen/small_15"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_finger_print"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/roboto_medium"
            android:paddingTop="@dimen/small_15"
            android:paddingBottom="@dimen/small_15"
            android:paddingEnd="@dimen/medium_25"
            android:paddingStart="@dimen/medium_25"
            android:background="@drawable/bg_button_six"/>

        <TextView
            android:id="@+id/tv_skip"
            android:layout_marginTop="@dimen/small_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maybe_be_later"
            android:textSize="@dimen/text_size_12"
            android:gravity="center"
            android:textColor="@color/textPrimary"
            android:fontFamily="@font/roboto_regular"/>

    </LinearLayout>
</RelativeLayout>