<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.WelcomeBackActivity"
    android:background="@color/white">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp">
            <include
                layout="@layout/toolbar_design_white" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvWelcomeUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="22sp"
                android:padding="15dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/textPrimary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_found_that_you_already_have_an_active_account_associated_with_this_mobile_number"
                android:textSize="@dimen/text_size_14"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:lineSpacingExtra="10dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/textPrimary"/>

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_size_16"
                android:layout_margin="15dp"
                android:background="@drawable/bg_button_ten"
                android:text="@string/log_in"
                android:fontFamily="@font/roboto_medium"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_margin="15dp"
                android:gravity="center"
                android:textSize="@dimen/text_size_14"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:lineSpacingExtra="10dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/textPrimary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/if_you_want_to_create_a_new_account_you_will_need_seperate_mobile_number_to_proceed"
                android:textSize="@dimen/text_size_14"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:lineSpacingExtra="10dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/textPrimary"/>

            <TextView
                android:id="@+id/btnCreateNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_size_16"
                android:layout_margin="15dp"
                android:background="@drawable/bg_button_ten"
                android:text="@string/create_a_new_account"
                android:fontFamily="@font/roboto_medium"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>