<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blackOpacity">
    <com.lyft.android.scissors.CropView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cropviewViewportRatio="1"
        android:id="@+id/crop"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_white"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_marginBottom="100dp"
            android:text="@string/adjust_fingers"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/retake"
                android:textColor="@color/white"
                android:textSize="16dp" />
            <TextView
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_photo"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:fontFamily="@font/roboto_medium"
                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>